# arc-agi3-ls20-spectral-solver

./: .gitignore  README.md  diag_l5_trigger_region.py  diag_model_divergence.py  requirements.txt  v15_level3_signal_planner.py  v16_signal_runner.py  v17_tr87_symbolic_solver.py  v18_wa30_object_solver.py  v19_ft09_constraint_solver.py  v20_vc33_geometry_solver.py  v21_g50t_clone_solver.py  v22_re86_shape_solver.py  v23_cd82_paint_solver.py  v24_r11l_centroid_solver.py  v25_lp85_permutation_solver.py  v26_sb26_tape_solver.py  v27_su15_particle_solver.py  v28_tn36_program_solver.py  v29_lf52_peg_solver.py  v30_cn04_alignment_solver.py  v31_s5i5_kinematic_solver.py  v32_sc25_spell_solver.py  v33_tu93_arrow_solver.py  v34_sp80_spill_solver.py  v35_m0r0_mirror_solver.py  v36_ar25_reflection_solver.py  v37_bp35_platform_solver.py
docs/: ARC_FIELD_NOTES.md  NEXT_STEPS.md  RESULTS.md
docs/docs/: ARC_FIELD_NOTES.md
exotic/: __init__.py  commutator_analysis.py  dynamics_probe.py  group_state.py  multiplication_table.py  perception.py  potential_field.py  solver.py  solver_sm.py  tda.py  temporal_diff.py  transformation_algebra.py  unified_score.py  visualize.py
hand_gesture_cpp/: BUILD  CMakeLists.txt  SETUP.md  hand_gesture_recognition.cpp
